overflow fix: removed min-width for <main>

--- a/style.css
+++ b/style.css
@@ -45,7 +45,6 @@ main {
 	align-items: center;
 	background-color: hsla(217, 50%, 10%, 0.25);
 	width: 25vw;
-	min-width: 430px;
 	max-width: 431px;
 	min-height: 595px;
 	padding: 15px 0 75px 0;
